--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -22,4 +22,13 @@
  <servlet-name>UserController</servlet-name>
  <url-pattern>/user/*</url-pattern>
  </servlet-mapping>
+ 
+   <servlet>
+ <servlet-name>BoardController</servlet-name>
+ <servlet-class>com.board.mini.controller.BoardController</servlet-class>
+ </servlet>
+ <servlet-mapping>
+ <servlet-name>BoardController</servlet-name>
+ <url-pattern>/board/*</url-pattern>
+ </servlet-mapping>
 </web-app>
